Enlarged the card to fix alignment issues

--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ body {
         background-repeat: no-repeat;
     }
     .card {
-        width: 375px;
+        width: 450px;
         margin: 0 auto 1rem;
         
     }
